Upd deployment scripts with new directories

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,16 +1,23 @@
-web/bundles/
-web/css/
-web/js/
-web/images/*
-web/fonts/
-build/
-/vendor
-/var
-bin
-composer.phar
-app/config/parameters.yml
-*~
-.idea
-.vagrant
+/app/config/parameters.yml
+/build/
+/phpunit.xml
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/data
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
+/vendor/
+/web/bundles/
+/web/css/
+/web/js/
+/web/images/*
+/web/fonts/
 app/Resources/certs/
 deployment/vagrant/.vagrant*
