--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -51,6 +51,7 @@ doctrine:
         user:     '%database_user%'
         password: '%database_password%'
         charset:  UTF8
+        server_version: '5.6'
         options:
             1002:  "SET NAMES 'UTF8'"
         types:
