--- a/backend/build.xml
+++ b/backend/build.xml
@@ -18,7 +18,7 @@
         <mkdir dir="${build}/logs"/>
         <mkdir dir="${build}/coverage"/>
         <mkdir dir="${build}/dist"/>
-        <exec executable="app/console" passthru="true">
+        <exec executable="bin/console" passthru="true">
             <arg value="cache:clear"/>
             <arg value="--env=prod"/>
         </exec>
@@ -32,7 +32,7 @@
     </target>
 
     <target name="cache" description="Clear test cache">
-        <exec executable="app/console" passthru="true">
+        <exec executable="bin/console" passthru="true">
             <arg value="cache:clear"/>
             <arg value="--env=test"/>
         </exec>
@@ -96,15 +96,15 @@
             </fileset>
         </copy>
 
-        <exec command="chmod +x ${dist}/app/console" />
+        <exec command="chmod +x ${dist}/bin/console" />
 
         <mkdir dir="${dist}/log"/>
 
-        <exec executable="app/console" passthru="true" checkreturn="true" dir="${dist}">
+        <exec executable="bin/console" passthru="true" checkreturn="true" dir="${dist}">
             <arg value="assets:install"/>
             <arg value="web"/>
         </exec>
-        <exec executable="app/console" passthru="true" checkreturn="true" dir="${dist}">
+        <exec executable="bin/console" passthru="true" checkreturn="true" dir="${dist}">
             <arg value="assetic:dump"/>
             <arg value="--env=prod"/>
         </exec>
