--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -54,7 +54,7 @@ doctrine:
         dbname:   %database_name%
         user:     %database_user%
         password: %database_password%
-        charset:  UTF8   
+        charset:  utf8mb4
         types:
             uuid: Ramsey\Uuid\Doctrine\UuidType
 
