--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -272,3 +272,7 @@ nelmio_api_doc:
     name: Civix API documentation
     motd:
         template: CivixApiBundle::motd.html.twig
+
+bazinga_geocoder:
+    providers:
+        google_maps: ~
