--- a/backend/composer.json
+++ b/backend/composer.json
@@ -46,7 +46,8 @@
         "ramsey/uuid-doctrine": "1.0.1",
         "ocramius/proxy-manager": "2.0.4",
         "oyejorge/less.php": "v1.7.0.10",
-        "willdurand/geocoder-bundle": "~4.1"
+        "willdurand/geocoder-bundle": "~4.1",
+        "layershifter/tld-extract": "~1.2"
     },
     "require-dev": {
         "phing/phing": "~2.16",
