Add a "bin-dir" option for composer

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -81,7 +81,8 @@
     "config": {
         "platform": {
             "php": "7.0"
-        }
+        },
+        "bin-dir": "bin"
     },
     "extra": {
         "symfony-app-dir": "app",
