--- a/backend/src/Civix/CoreBundle/Resources/config/services/repository.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services/repository.yml
@@ -3,3 +3,8 @@ services:
         class: Civix\CoreBundle\Repository\GroupRepository
         factory: ["@doctrine", "getRepository"]
         arguments: [Civix\CoreBundle\Entity\Group]
+
+    civix_core.karma_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory: ["@doctrine", "getRepository"]
+        arguments: [Civix\CoreBundle\Entity\Karma]
