--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ deploy:
     upload-dir: develop
     on:
       branch: develop
-  # deploy master to the staging/prod environment
+  # deploy master to the staging environment
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
@@ -41,6 +41,17 @@ deploy:
     upload-dir: master
     on:
       branch: master
+  # deploy a tagged release for prod environment
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY_ID
+    secret_access_key: $AWS_SECRET_ACCESS_KEY
+    bucket: powerline-apiserver-builds
+    skip_cleanup: true
+    region: us-east-1
+    local_dir: build/release/$TRAVIS_BUILD_NUMBER
+    upload-dir: releases
+    on:
+      tags: true
 
 notifications:
   webhooks:
