Update dependencies for v2.2

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -43,9 +43,9 @@
         "giggsey/libphonenumber-for-php": "~8.0",
         "friendsofsymfony/rest-bundle": "~2.1",
         "hwi/oauth-bundle": "~0.5",
-        "ramsey/uuid-doctrine": "1.0.1",
+        "ramsey/uuid-doctrine": "~1.2",
         "ocramius/proxy-manager": "2.0.4",
-        "oyejorge/less.php": "v1.7.0.10",
+        "oyejorge/less.php": "~1.7",
         "willdurand/geocoder-bundle": "~4.1",
         "layershifter/tld-extract": "~1.2"
     },
@@ -55,7 +55,7 @@
         "phpunit/phpunit-mock-objects": "~3.4",
         "phpunit/php-code-coverage": "~4.0",
         "phpunit/php-token-stream": "~1.4",
-        "sebastian/phpcpd": "~2.0",
+        "sebastian/phpcpd": "~3.0",
         "liip/functional-test-bundle": "~1.6",
         "squizlabs/php_codesniffer": "~2.7",
         "fzaninotto/faker": "~1.6",
