--- a/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
@@ -20,3 +20,9 @@ services:
         arguments: ['@geocoder']
         tags:
             - { name: kernel.event_subscriber }
+
+    civix_core.event_listener.async_event_listener:
+        class: Civix\CoreBundle\EventListener\AsyncEventListener
+        arguments: ['@old_sound_rabbit_mq.async_event_producer']
+        tags:
+            - { name: kernel.event_listener, event: async_event.dispatch }
