--- a/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
@@ -27,7 +27,9 @@ services:
             - '@doctrine.orm.entity_manager'
             - '@civix_core.karma_repository'
         tags:
-            - { name: kernel.event_subscriber }    civix_core.event_listener.async_event_listener:
+            - { name: kernel.event_subscriber }
+
+    civix_core.event_listener.async_event_listener:
         class: Civix\CoreBundle\EventListener\AsyncEventListener
         arguments: ['@old_sound_rabbit_mq.async_event_producer']
         tags:
