Add Geocoder's ArrayProvider for tests

--- a/backend/app/config/config_test.yml
+++ b/backend/app/config/config_test.yml
@@ -55,4 +55,7 @@ monolog:
 security:
     firewalls:
         superuser_security_area:
-            http_basic: ~
+            http_basic:
+
+bazinga_geocoder:
+    default_provider: array
