--- a/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services/listener.yml
@@ -45,3 +45,9 @@ services:
                 - '@logger'
             tags:
                 - { name: kernel.event_subscriber }
+
+    civix_core.event_listener.user_avatar_subscriber:
+        class: Civix\CoreBundle\EventListener\UserAvatarSubscriber
+        arguments: ['@civix_core.image_manager', '@logger']
+        tags:
+            - { name: kernel.event_subscriber }
