--- a/backend/composer.json
+++ b/backend/composer.json
@@ -31,7 +31,7 @@
         "excelwebzone/recaptcha-bundle": "3.0.x-dev",
         "nelmio/api-doc-bundle": "~2.13",
         "jms/serializer-bundle": "~1.1",
-        "vich/uploader-bundle": "~1.4",
+        "vich/uploader-bundle": "dev-master",
         "knplabs/knp-gaufrette-bundle": "~0.3",
         "php-amqplib/rabbitmq-bundle": "~1.12",
         "stripe/stripe-php": "~2.3",
