--- a/backend/src/Civix/CoreBundle/Resources/config/services.yml
+++ b/backend/src/Civix/CoreBundle/Resources/config/services.yml
@@ -5,3 +5,9 @@ services:
             - ~
             - ~
             - !php/const:LayerShifter\TLDExtract\Extract::MODE_ALLOW_ICCAN
+
+    civix_core.rabbit.push_queue:
+        class: Civix\CoreBundle\Service\RabbitMQCallback\PushQueue
+        arguments:
+            - [ "@civix_core.push_sender", "@civix_core.representative_manager" ]
+            - "@logger"
