--- a/backend/src/Civix/ApiBundle/Resources/config/services/form.yml
+++ b/backend/src/Civix/ApiBundle/Resources/config/services/form.yml
@@ -9,4 +9,4 @@ services:
         class: Civix\ApiBundle\Form\Type\EncodedFileType
         arguments: ['@civix_core.content_converter']
         tags:
-            - { name: form.type, alias: Civix\ApiBundle\Form\Type\AvatarType }
+            - { name: form.type, alias: Civix\ApiBundle\Form\Type\EncodedFileType }
