--- a/backend/app/config/config_test.yml
+++ b/backend/app/config/config_test.yml
@@ -13,7 +13,7 @@ swiftmailer:
     disable_delivery: true
 
 liip_functional_test:
-    cache_sqlite_db: false
+    cache_sqlite_db: true
     authentication:
         username: "admin"
         password: "admin"
