Split ApiBundleV2 test suite #2

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,7 @@ script:
   - php ./phpunit.phar -c phpunit.xml.dist --colors=always --printer=\\Civix\\CoreBundle\\Test\\TimePrinter --testsuite=tests
   - php ./phpunit.phar -c phpunit.xml.dist --colors=always --printer=\\Civix\\CoreBundle\\Test\\TimePrinter --testsuite=ApiBundleV1
   - php ./phpunit.phar -c phpunit.xml.dist --colors=always --printer=\\Civix\\CoreBundle\\Test\\TimePrinter --testsuite=ApiBundleV2
+  - php ./phpunit.phar -c phpunit.xml.dist --colors=always --printer=\\Civix\\CoreBundle\\Test\\TimePrinter --testsuite=ApiBundleV3
   - php ./phpunit.phar -c phpunit.xml.dist --colors=always --printer=\\Civix\\CoreBundle\\Test\\TimePrinter --testsuite=CoreBundle
   - php ./phpunit.phar -c phpunit.xml.dist --colors=always --printer=\\Civix\\CoreBundle\\Test\\TimePrinter --testsuite=FrontBundle
 
