--- a/backend/app/config/config.yml
+++ b/backend/app/config/config.yml
@@ -97,8 +97,8 @@ knp_paginator:
     page_range: 5                      # default page range used in pagination control
     default_options:
         page_name: page                # page query parameter name
-        sort_field_name: sort          # sort field query parameter name
-        sort_direction_name: direction # sort direction query parameter name
+        sort_field_name: x-sort          # sort field query parameter name
+        sort_direction_name: x-direction # sort direction query parameter name
         distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
     template:
         pagination: MopaBootstrapBundle:Pagination:sliding.html.twig     # sliding pagination controls template
