--- a/backend/deployment/ansible/roles/setup-vagrant/tasks/main.yml
+++ b/backend/deployment/ansible/roles/setup-vagrant/tasks/main.yml
@@ -25,25 +25,25 @@
     - vim
     - git
     - nginx
-    - php7.0
-    - php7.0-common
-    - php7.0-fpm
-    - php7.0-cli
-    - php7.0-curl
-    - php7.0-gd
-    - php7.0-mysql
-    - php7.0-sqlite3
-    - php7.0-intl
-    - php7.0-bcmath
-    - php7.0-xml
-    - php7.0-mbstring
+    - php7.1
+    - php7.1-common
+    - php7.1-fpm
+    - php7.1-cli
+    - php7.1-curl
+    - php7.1-gd
+    - php7.1-mysql
+    - php7.1-sqlite3
+    - php7.1-intl
+    - php7.1-bcmath
+    - php7.1-xml
+    - php7.1-mbstring
     - supervisor
     - rabbitmq-server
     - mysql-server-5.6
 
 - name: fpm | configure pool
   tags: vagrant
-  template: src=fpm.j2 dest="/etc/php5/fpm/pool.d/{{ project }}.conf"
+  template: src=fpm.j2 dest="/etc/php/7.1/fpm/pool.d/{{ project }}.conf"
 
 - name: nginx | setup vhost
   tags: vagrant
@@ -71,7 +71,7 @@
 
 - name: fpm | restart
   tags: vagrant
-  service: name=php5-fpm state=restarted
+  service: name=php7.1-fpm state=restarted
 
 - name: rabbitmq | configure vhost
   tags: vagrant
@@ -128,6 +128,6 @@
     chdir: /vagrant/backend 
 
 - name: composer | install dependancies
-  become_user: civix
+  become_user: vagrant
   tags: composer
   composer: command=install working_dir=/vagrant/backend
